<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ui.review.ReviewAllFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar_reviewAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <TextView
            style="@style/Typography.Bold24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviewAll_goods_name" />

    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView_reviewAll_newest"
            style="@style/Typography.Bold16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/reviewAll_newest" />

        <TextView
            android:id="@+id/textView_reviewAll_rating"
            style="@style/Typography.Bold16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/reviewAll_rating" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="2dp"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:background="@color/black" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RatingBar
                        android:id="@+id/ratingBar_reviewAll_review"
                        style="@style/Widget.AppCompat.RatingBar.Indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:progressBackgroundTint="@color/rose_200"/>

                    <TextView
                        android:id="@+id/textView_reviewAll_userName"
                        style="@style/Typography.Medium14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="8dp"
                        android:text="사용자 아이디" />

                    <TextView
                        android:id="@+id/textView_reviewAll_date"
                        style="@style/Typography.Medium14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:text="작성 날짜"
                        android:textAlignment="textEnd" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <ImageView
                        android:id="@+id/imageView_reviewAll_review_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_account_circle_48dp" />

                    <TextView
                        android:id="@+id/textView_reviewAll_review_contents"
                        style="@style/Typography.Medium14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="상품이 너무 좋습니다!!" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RatingBar
                        android:id="@+id/ratingBarReview1"
                        style="@style/Widget.AppCompat.RatingBar.Indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/textViewUserName1"
                        style="@style/Typography.Medium14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="8dp"
                        android:text="사용자 아이디" />

                    <TextView
                        android:id="@+id/textViewDate1"
                        style="@style/Typography.Medium14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:text="작성 날짜"
                        android:textAlignment="textEnd" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <ImageView
                        android:id="@+id/imageViewReview1"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_account_circle_48dp" />

                    <TextView
                        android:id="@+id/textViewReview1"
                        style="@style/Typography.Medium14"
                        android:layout_width="match_parent"
                        android:layout_height="600dp"
                        android:layout_marginStart="20dp"
                        android:text="상품이 너무 좋습니다!!이거 꼭 사세요" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>